src/objects/PSA_PS_Level_Billing_Level__c.object
<CustomObject>
    <description>Contains a mapping of PS Level to Billing Levels</description>
    <fields>
        <fullName>PSA_Billing_Level__c</fullName>
        <label>Billing Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_PS_Level__c</fullName>
        <label>PS Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Title__c</fullName>
        <description>For informational purposes only</description>
        <inlineHelpText>For informational purposes only</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PSA PS Level Billing Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_PS_Level__c</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>PSA_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLBL-{000}</displayFormat>
        <label>PS Level Billing Level Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA PS Level Billing Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>